added a -O csv option and stub files for CSV output for scamper trace; csv outformat:  for each hop: version;unitID;timestamp;src;dst;method;status;hop;addr;rtt and updated codebase to make it work with multiple targets given as an input file and updated the scamper/Makefile.am; and updated the man page

--- a/scamper/Makefile.am
+++ b/scamper/Makefile.am
@@ -24,6 +24,7 @@ libscamperfile_la_SOURCES = \
 	trace/scamper_trace_warts.c \
 	trace/scamper_trace_text.c \
 	trace/scamper_trace_json.c \
+	trace/scamper_trace_csv.c \
 	ping/scamper_ping.c \
 	ping/scamper_ping_warts.c \
 	ping/scamper_ping_text.c \
@@ -98,6 +99,7 @@ scamper_SOURCES = \
 	trace/scamper_trace_warts.c \
 	trace/scamper_trace_text.c \
 	trace/scamper_trace_json.c \
+	trace/scamper_trace_csv.c \
 	trace/scamper_trace_do.c \
 	ping/scamper_ping.c \
 	ping/scamper_ping_warts.c \
